--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -269,7 +269,7 @@
                         $('#status').css('color','#4BBF73');
                         $('#book-upload-form')[0].reset();
                         $('#status').fadeOut(3000);
-                        window.location.href = 'http://localhost:3000';
+                        window.location.href = 'https://vook-portal.herokuapp.com/';
                     }
                 }).catch(err=>{
                     console.log(err);
